logs: services: fix filters alignment
logs: Fix overflowing filters by swiching to compressed filter on bigger breakpoint
These filters breakpoints seem to have changed in PF5.

services: logs: Fix misalignment in toolbar

--- a/pkg/systemd/logs.scss
+++ b/pkg/systemd/logs.scss
@@ -147,4 +147,9 @@
   .pf-c-toolbar__expandable-content.pf-m-expanded .pf-c-divider {
     display: none;
   }
+
+  // FIXME: When porting the selects to the PF5 select implementation drop this
+  .pf-c-toolbar__item {
+    align-self: center;
+  }
 }
